--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,8 +47,10 @@
     <Compile Include="DataBase.cs" />
     <Compile Include="IReplicator.cs" />
     <Compile Include="IService.cs" />
+    <Compile Include="IService2.cs" />
     <Compile Include="ITypeOfRisk.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecurityException.cs" />
     <Compile Include="TypeOfRisk.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
