--- a/Replicator/Replicator.csproj
+++ b/Replicator/Replicator.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Replicator.cs" />
+    <Compile Include="ReplicatorProxy.cs" />
     <Compile Include="SecondReplicator.cs" />
   </ItemGroup>
   <ItemGroup>
