--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,8 +51,21 @@
     <Compile Include="IService2.cs" />
     <Compile Include="ITypeOfRisk.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RBAC\Formater.cs" />
+    <Compile Include="RBAC\RolesConfig.cs" />
+    <Compile Include="RolesConfigFile.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RolesConfigFile.resx</DependentUpon>
+    </Compile>
     <Compile Include="SecurityException.cs" />
     <Compile Include="TypeOfRisk.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="RolesConfigFile.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>RolesConfigFile.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
