--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -51,6 +51,7 @@
     <Compile Include="IService2.cs" />
     <Compile Include="ITypeOfRisk.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RBAC\CustomPrincipal.cs" />
     <Compile Include="RBAC\Formater.cs" />
     <Compile Include="RBAC\RolesConfig.cs" />
     <Compile Include="RolesConfigFile.Designer.cs">
