--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -51,6 +51,13 @@
     <Compile Include="IService.cs" />
     <Compile Include="IService2.cs" />
     <Compile Include="ITypeOfRisk.cs" />
+    <Compile Include="Logger\Audit.cs" />
+    <Compile Include="Logger\AuditEventFile.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AuditEventFile.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Logger\AuditEvents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RBAC\CustomAuthorizationManager.cs" />
     <Compile Include="RBAC\CustomAuthorizationPolicy.cs" />
@@ -66,6 +73,10 @@
     <Compile Include="TypeOfRisk.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Logger\AuditEventFile.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AuditEventFile.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="RolesConfigFile.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>RolesConfigFile.Designer.cs</LastGenOutput>
