--- a/AlarmGenerateService2/AlarmGenerateService2.csproj
+++ b/AlarmGenerateService2/AlarmGenerateService2.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Replicator.cs" />
     <Compile Include="Service.cs" />
   </ItemGroup>
   <ItemGroup>
