--- a/AlarmGenerateService2/AlarmGenerateService2.csproj
+++ b/AlarmGenerateService2/AlarmGenerateService2.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Replicator.cs" />
+    <Compile Include="ReplicatorService.cs" />
     <Compile Include="Service.cs" />
   </ItemGroup>
   <ItemGroup>
