--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>AuditEventFile.resx</DependentUpon>
     </Compile>
     <Compile Include="Logger\AuditEvents.cs" />
+    <Compile Include="Manager\CertManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RBAC\CustomAuthorizationManager.cs" />
     <Compile Include="RBAC\CustomAuthorizationPolicy.cs" />
